--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Back End Assessment</title>
+    <title>Back End Assessment UPGRADE!</title>
   </head>
   <body class="container">
-    <button id="complimentButton">Get a compliment</button>
-
+    <button id="complimentButton">Get a sincere compliment</button>
+    <p></p>
+    <button id="nonComplimentButton">Get an insincere compliment</button>
+    <p></p>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     
