--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <p></p>
     <button id="nonComplimentButton">Get an insincere compliment</button>
     <p></p>
+    <button id="superpowerButton">Get a superpower!</button>
+    <p></p>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     
