--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <p></p>
     <button id="superpowerButton">Get a superpower!</button>
     <p></p>
+    <button id="petPokemonButton">Get a pet Pokemon!</button>
+    <p></p>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     
