--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,12 @@
     <title>Back End Assessment UPGRADE!</title>
   </head>
   <body class="container">
+    <h1>unlimitedWishes(param)</h1>
     <button id="complimentButton">Get a sincere compliment</button>
     <p></p>
     <button id="nonComplimentButton">Get an insincere compliment</button>
+    <p></p>
+    <button id="dessertButton">Get a dessert!</button>
     <p></p>
     <button id="superpowerButton">Get a superpower!</button>
     <p></p>
