foundTheProblemInIndex.js,EverythingWorks!

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <p></p>
     <button id="superpowerButton">Get a superpower!</button>
     <p></p>
-    <button id="petPokemonButton">Get a pet Pokemon!</button>
+    <button id="petPokemonButton">Get a pet Pokémon!</button>
     <p></p>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
