--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <title>Back End Assessment UPGRADE!</title>
   </head>
   <body class="container">
-    <h1>unlimitedWishes(param)</h1>
+    <h1>Unlimited Wishes! (with Oddly Specific Parameters)</h1>
     <button id="complimentButton">Get a sincere compliment</button>
     <p></p>
     <button id="nonComplimentButton">Get an insincere compliment</button>
